src/test/ui/issues/issue-21950.stderr
error[E0393]: the type parameter `Rhs` must be explicitly specified
  --> $DIR/issue-21950.rs:5:18
   |
LL |             &dyn Add;
   |                  ^^^ missing reference to `Rhs`
   |
   = note: because of the default `Self` reference, type parameters must be specified on object types

error[E0191]: the value of the associated type `Output` (from the trait `std::ops::Add`) must be specified
  --> $DIR/issue-21950.rs:5:14
   |
LL |             &dyn Add;
   |              ^^^^^^^ associated type `Output` must be specified

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0191, E0393.
For more information about an error, try `rustc --explain E0191`.
